--- a/src/components/widget-creator-page.scss
+++ b/src/components/widget-creator-page.scss
@@ -156,10 +156,14 @@ a {
 			background: linear-gradient(#ffffff, #ffe5cc);
 		}
 	}
-}
 
-#qset-generation-confirmation-bar {
-	background-color: #10a37f;
+	&#qset-generation-confirmation-bar {
+		background-color: #3690E6;
+	
+		button:hover {
+			background: linear-gradient(#ffffff, #bbdeff);
+		}
+	}
 }
 
 .dot {
