fixes styling removing aabsolute positoing

--- a/src/components/my-widgets-page.scss
+++ b/src/components/my-widgets-page.scss
@@ -108,9 +108,18 @@
 				// background: linear-gradient(#83caf3 16%, #37a9e6 89%);
 			}
 
+			.searchContainer {
+				//maybe some display flex
+				display: flex;
+				flex-direction: column;
+				justify-content: center;
+				align-items: center;
+			}
+
+
 			.search {
-				position: relative;
-				padding: 10px 0 30px 0;
+				// position: relative;
+				padding: 10px 0 0 0;
 
 				background: #ebebeb;
 
@@ -130,7 +139,7 @@
 				}
 
 				.search-icon {
-					position: absolute;
+					// position: absolute;
 					top: 12px;
 					left: 13px;
 					height: 14px;
@@ -143,7 +152,7 @@
 				}
 
 				.search-close {
-					position: absolute;
+					// position: absolute;
 					top: 8px;
 					right: 40px;
 					margin-top: 1px;
@@ -152,7 +161,7 @@
 				}
 
 				.textbox {
-					position: absolute;
+					// position: absolute;
 					border: none;
 					outline: none;
 					width: 165px;
@@ -166,7 +175,8 @@
 				}
 
 				.textbox-background {
-					position: absolute;
+					// position: absolute;
+                    display: flex;
 					width: 205px;
 					height: 20px;
 					left: 9px;
@@ -174,6 +184,7 @@
 					border: solid 1px #b0b0b0;
 					border-radius: 12px;
 				}
+
 			}
 
 			// .courses {
