removes uncessary styling and centers x button

--- a/src/components/my-widgets-page.scss
+++ b/src/components/my-widgets-page.scss
@@ -160,9 +160,9 @@
 
 				.search-close {
 					// position: absolute;
-					top: 8px;
-					right: 40px;
-					margin-top: 1px;
+					// top: 8px;
+					// right: 40px;
+					margin-top: -1px;
 					color: rgb(221, 221, 221);
 					cursor: pointer;
 				}
