--- a/src/components/question-generator.scss
+++ b/src/components/question-generator.scss
@@ -44,6 +44,19 @@
 			font-weight: 400;
 		}
 
+		input {
+			border: solid 1.5px #3690E6;
+			border-radius: 3px;
+
+			&.invalid {
+				border: 1.5px solid red;
+			}
+
+			&.warning {
+				border: 1.5px solid #d87a00;
+			}
+		}
+
 		.description {
 			display: block;
 			padding: 1em;
@@ -148,11 +161,6 @@
 		color: $color-red;
 		font-size: 0.8em;
 		font-weight: 400;
-	}
-
-	.invalid {
-		border: 2px solid red;
-		border-radius: 3px;
 	}
 
 	.warning {
