--- a/src/components/checkbox-button.scss
+++ b/src/components/checkbox-button.scss
@@ -1,3 +1,5 @@
+$default-font-size: 0.7rem;
+
 .CheckboxButton {
 	padding: 1.5px;
 	cursor: pointer;
@@ -13,7 +15,7 @@
 
 
 	label {
-	  font-size: 0.7rem;
+	  font-size: $default-font-size;
 	  cursor: pointer;
 	  font-weight: normal;
 	}
