--- a/src/components/checkbox-button.scss
+++ b/src/components/checkbox-button.scss
@@ -9,7 +9,7 @@ $default-font-size: 0.7rem;
 	border-radius: 4px;
 	// min-width: 80px;
 	display: flex;
-	justify-content: space-between;
+	justify-content: center;
 	align-items: center;
 	outline: none;
 
@@ -18,6 +18,7 @@ $default-font-size: 0.7rem;
 	  font-size: $default-font-size;
 	  cursor: pointer;
 	  font-weight: normal;
+      text-align: center;
 	}
 
 	input {
