--- a/src/components/my-widgets-page.scss
+++ b/src/components/my-widgets-page.scss
@@ -119,12 +119,13 @@
 
 			.filtersGroup {
 				// display: none;
-				display: flex;
+				display: grid;
+				grid-template-columns: 1fr 1fr;
 				overflow: hidden;
 				width: 0;
 				max-height: 0;
 				opacity: 0;
-				transition: max-height 0.5s ease, opacity 0.3s ease;
+				transition: max-height 0.3s ease, opacity 0.3s ease;
 				gap: 5px;
 				padding-bottom: 0.5rem;
 				padding-top: 0.1rem;
